[gd_scene load_steps=10 format=2]

[ext_resource path="res://material_maker/panels/paint/select_mask_dialog.gd" type="Script" id=1]
[ext_resource path="res://material_maker/tools/obj_loader/obj_loader.gd" type="Script" id=2]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform sampler2D idmap;
uniform vec4      color;

void fragment() {
	vec3 id = texture(idmap, UV).rgb;
	COLOR = vec4(vec3(step(length(id-color.rgb), 0.05)), 1.0);
}
"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/color = null

[sub_resource type="ButtonGroup" id=7]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="Shader" id=2]
code = "shader_type spatial;
render_mode unshaded;

uniform sampler2D tex : hint_albedo;
uniform sampler2D mask : hint_white;

void fragment() {
	vec4 albedo_tex = texture(tex, UV);
	vec4 mask_tex = texture(mask, UV);
	ALBEDO = albedo_tex.rgb*vec3(0.1+0.9*mask_tex.r);
}
"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )

[sub_resource type="Environment" id=6]
background_mode = 1
background_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="SelectMask" type="WindowDialog"]
margin_right = 520.0
margin_bottom = 288.0
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "Mask from ID map"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
genmask_material = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 516.0
margin_bottom = 276.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 136.0
margin_bottom = 276.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 136.0
margin_bottom = 20.0

[node name="IdMapLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 50.0
margin_bottom = 17.0
text = "ID Map:"

[node name="IdMapFile" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 136.0
margin_bottom = 20.0
text = "ID Map file"

[node name="ShowIdMap" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 136.0
margin_bottom = 48.0
group = SubResource( 7 )
text = "Show ID Map"

[node name="ShowMask" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 136.0
margin_bottom = 76.0
group = SubResource( 7 )
text = "Show Mask"

[node name="ShowMix" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 136.0
margin_bottom = 76.0
group = SubResource( 7 )
text = "Show Mix"

[node name="Reset" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 136.0
margin_bottom = 100.0
text = "Reset Mask"

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 516.0
margin_bottom = 276.0
size_flags_horizontal = 3

[node name="Viewport" type="Viewport" parent="VBoxContainer/HBoxContainer/ViewportContainer"]
size = Vector2( 100, 100 )
own_world = true
handle_input_locally = false
keep_3d_linear = true
render_target_update_mode = 0

[node name="MeshPivot" type="Spatial" parent="VBoxContainer/HBoxContainer/ViewportContainer/Viewport"]

[node name="MeshInstance" type="MeshInstance" parent="VBoxContainer/HBoxContainer/ViewportContainer/Viewport/MeshPivot"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 3 )

[node name="CameraPivot" type="Spatial" parent="VBoxContainer/HBoxContainer/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0 )

[node name="Camera" type="Camera" parent="VBoxContainer/HBoxContainer/ViewportContainer/Viewport/CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )
environment = SubResource( 6 )
far = 50.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/ViewportContainer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
flip_v = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 280.0
margin_right = 516.0
margin_bottom = 284.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_left = 201.0
margin_top = 264.0
margin_right = 315.0
margin_bottom = 284.0
size_flags_horizontal = 4

[node name="OK" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 55.0
margin_bottom = 20.0
rect_min_size = Vector2( 55, 0 )
text = "OK"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 59.0
margin_right = 114.0
margin_bottom = 20.0
rect_min_size = Vector2( 55, 0 )
text = "Cancel"

[node name="ObjLoader" type="Node" parent="."]
script = ExtResource( 2 )

[connection signal="popup_hide" from="." to="." method="_on_NewPainterWindow_popup_hide"]
[connection signal="minimum_size_changed" from="VBoxContainer" to="." method="_on_VBoxContainer_minimum_size_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/IdMapFile" to="." method="_on_IdMapFile_pressed"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/ShowIdMap" to="." method="_on_Show_item_selected" binds= [ 0 ]]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/ShowMask" to="." method="_on_Show_item_selected" binds= [ 1 ]]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/ShowMix" to="." method="_on_Show_item_selected" binds= [ 2 ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/ViewportContainer" to="." method="_on_ViewportContainer_gui_input"]
[connection signal="resized" from="VBoxContainer/HBoxContainer/ViewportContainer" to="." method="_on_ViewportContainer_resized"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Cancel" to="." method="_on_Cancel_pressed"]
